<resources>
    <string name="app_name" translatable="false">Github User Lookup</string>
    <string name="github" translatable="false">Github</string>

    <string name="detail_user">Detail User</string>
    <string name="tab_followers">FOLLOWERS (%d)</string>
    <string name="tab_following">FOLLOWING (%d)</string>
    <string name="no_data">No data found</string>
    <string name="many_more">and %d more..</string>
    <string name="input_username">Input username..</string>
    <string name="account_name">Account Name</string>
    <string name="username">Username</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="profile_image">Profile Image</string>
    <string name="settings">Settings</string>
    <string name="no_connection">No internet connection</string>
    <string name="failed">Failed : %s</string>
    <string name="total_users">Total User : %d</string>
    <string name="favorite">Favorite</string>
    <string name="has_added_favorite">%s has been added to Favorite</string>
    <string name="has_removed_favorite">%s has been removed to Favorite</string>
    <string name="your_favorite_list">Your Favorite List</string>
    <string name="followers_following">%d Followers | %d Following</string>
    <string name="change_language_setting">Change Language Setting</string>
    <string name="show_notification_reminder">Show Notification Reminder</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="language_setting">Language Setting</string>
    <string name="activated_notification">Notification activated</string>
    <string name="deactivated_notification">Notification deactivated</string>
</resources>