<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_50">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_700"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_photo_profile"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:tooltipText="@string/profile_image"
                    tools:src="@drawable/ic_baseline_person_24"/>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/img_photo_profile"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="16dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:tooltipText="@string/account_name"
                    tools:text="@string/account_name" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/img_photo_profile"
                    android:layout_below="@id/tv_name"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="16dp"
                    android:drawablePadding="5dp"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:textColor="@color/white"
                    android:tooltipText="@string/username"
                    tools:text="@string/username"
                    app:drawableStartCompat="@drawable/ic_baseline_person_24" />

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/img_photo_profile"
                    android:layout_below="@id/tv_username"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="16dp"
                    android:drawablePadding="5dp"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:tooltipText="@string/company"
                    tools:text="@string/company"
                    app:drawableStartCompat="@drawable/ic_baseline_corporate_fare_24" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:drawablePadding="5dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:tooltipText="@string/location"
                    tools:text="@string/location"
                    app:drawableStartCompat="@drawable/ic_baseline_location_on_24_white" />

                <TextView
                    android:id="@+id/tv_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:tooltipText="@string/repository"
                    tools:text="@string/repository"
                    app:drawableStartCompat="@drawable/ic_outline_inventory_2_24_white" />
            </LinearLayout>
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_700"
                app:tabTextColor="@android:color/white"/>
        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/grey_700"
        android:contentDescription="@string/favorite"
        android:tooltipText="@string/favorite"
        android:visibility="invisible"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24" />
</RelativeLayout>